# laba

./: CMakeLists.txt  Cube.cpp  Cube.hpp  lab_2.cpp  main.cpp
